Finished Both cards - 50% completed
-> 50% of the challenge has been completed.

-> Remaining is the javascript, animation and hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,21 @@
         <button class="rate__submit">SUBMIT</button>
       </section>
 
-      <section class="card__thankyou"></section>
+      <section class="card__thankyou">
+        <img src="images/illustration-thank-you.svg" alt="thank you icon" class="card__thankyou--img">
+
+        <div class="card__thankyou--rate">
+          You selected <span class="card__thankyou--rating" id="rating"> 4 </span> out of 5
+        </div>
+
+        <h1 class="card__thankyou--thankyou">Thank you!</h1>
+
+        <p class="card__thankyou--text">
+          We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!
+        </p>
+      </section>
+
+
   </section>
   
 
