--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,17 @@
 
       <section class="card__rate">
   
-        <div class="rate__star--icon">
+        <div class="rate__star--icon" id="rate__star--icon">
           <img src="images/icon-star.svg" alt="star icon">
         </div>
   
-        <h1 class="rate__title">How did we do?</h1>
+        <h1 class="rate__title" id="rate__title">How did we do?</h1>
   
-        <p class="rate__text">Please let us know how we did with your support request. All feedback is appreciated 
+        <p class="rate__text" id="rate__text">Please let us know how we did with your support request. All feedback is appreciated 
           to help us improve our offering!
         </p>
   
-        <div class="rate__container">
+        <div class="rate__container" id="rate__container">
           <button class="rate__container--numbers" data-value="1" id="1">1</button>
           <button class="rate__container--numbers" data-value="2" id="2">2</button>
           <button class="rate__container--numbers" data-value="3" id="3">3</button>
